# Sephrasto

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Charakter.py  CharakterAttribute.py  CharakterAttributeWrapper.py  CharakterBeschreibung.py  CharakterBeschreibungWrapper.py  CharakterEP.py  CharakterEPWrapper.py  CharakterEditor.py  CharakterEquipment.py  CharakterEquipmentWrapper.py  CharakterFertigkeiten.py  CharakterFertigkeitenWrapper.py  CharakterFreieFert.py  CharakterFreieFertWrapper.py  CharakterFreieFertigkeitenPicker.py  CharakterFreieFertigkeitenPickerWrapper.py  CharakterItems.py  CharakterItemsWrapper.py  CharakterMain.py  CharakterMerger.py  CharakterMinderpakt.py  CharakterMinderpaktWrapper.py  CharakterNotiz.py  CharakterNotizWrapper.py  CharakterPrintUtility.py  CharakterRuestungen.py  CharakterTalente.py  CharakterUeberWrapper.py  CharakterUebernatuerlich.py  CharakterUebernatuerlichWrapper.py  CharakterVorteile.py  CharakterVorteileWrapper.py  CharakterWaffen.py  CheatsheetGenerator.py  ChoicePopupWrapper.py  (+73 more)
Doc/: CharakterAssistent.md  CharakterEditor.md  DatenbankEditor.md  Help.md  PluginAPI.md  ScriptAPI.md  Varianten_Auswahlmöglichkeiten.md
IncludeInBuildFolder/: qt.conf
Make/: Sephrasto.pyproj
UI/: CharakterAttribute.ui  CharakterBeschreibung.ui  CharakterEP.ui  CharakterEquipment.ui  CharakterFert.ui  CharakterFertigkeiten.ui  CharakterFreieFert.ui  CharakterFreieFertigkeitenPicker.ui  CharakterItems.ui  CharakterMain.ui  CharakterMinderpakt.ui  CharakterNotiz.ui  CharakterRuestungen.ui  CharakterUeber.ui  (+17 more)
(+2409 files in other folders)
