[tool.poetry]
name = "sephrasto"
version = "3.4.0"
description = "Ein Charaktergenerator für das DSA-Hausregelsystem Ilaris."
authors = ["Aeolitus", "brzGatsu"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^4.9.2"
PySide6 = "^6.4.2"
PyYAML = "^6.0"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
cx-Freeze = "^6.14.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
